# MiScreenBarLight-HomeKit

./: .gitignore  CMakeLists.txt  LICENSE  partitions_hap.csv
main/: CMakeLists.txt  app_main.c  lightbulb.c  lightbulb.h
